--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
     "vee-validate": "^2.0.0-rc.5",
     "vue-router": "^2.6.0",
     "vue-scrollto": "^2.6.8",
-    "vue-template-compiler": "^2.3.4"
+    "vue-template-compiler": "^2.3.4",
+    "vuex": "^2.3.1"
   }
 }
