--- a/src/package.json
+++ b/src/package.json
@@ -1,24 +1,30 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "axios": "^0.15.3",
     "bootstrap-less": "^3.3.8",
-    "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^0.8.3",
-    "lodash": "^4.17.4",
-    "vue": "^2.3.4",
+    "cross-env": "^5.0.1",
     "font-awesome": "^4.7.0",
-    "moment": "^2.18.1"
+    "jquery": "^3.1.1",
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "vue": "^2.3.4"
   },
   "dependencies": {
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "node-gyp": "^3.6.2",
+    "rebuild": "^0.1.2",
     "vee-validate": "^2.0.0-rc.5",
     "vue-router": "^2.6.0",
     "vue-scrollto": "^2.6.8",
